2003-04-30  Bob Woodside  <dumbledore@woodsway.com>

	* FvwmIdent/FvwmIdent.c (ProcessXEvent):
	Prevent call to UpdateBackgroundTransparency with a colorset
        of -1 when Fore/Back are specified (caused BadDrawable X
        error).

2003-04-29  olicha  <olivier.chapuis@free.fr>

	* FvwmIdent/FvwmIdent.h:
	* FvwmIdent/FvwmIdent.c (ErrorHandler):
	(main):
	Added an X error handler

2003-04-28  olicha  <olivier.chapuis@free.fr>

	* FvwmIdent/FvwmIdent.c (MakeList): 
	Fixed report of EWMH state hints
	(ErrorHandler): 

2003-04-26  Mikhael Goikhman  <migo@homemail.com>

	* FvwmIconMan/*:
	* FvwmIconBox/*:
	reformatted, removed support for fvwm version 1

2003-04-25  Dan Espen  <dane@mk.telcordia.com>

	* FvwmIconMan/xmanager.c (draw_button): Fix problem with mini-icon
	erasure clearing part of the relief in a button.

2003-04-25  olicha  <olivier.chapuis@free.fr>

	* FvwmForm/FvwmForm.c (ParseActiveMessage):
	Tried to fix a core dump

2003-04-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (main):
	* FvwmButtons/parse.c (parse_window_geometry):
	(ParseConfigLine):
	fixed Xinerama handling of ButtonGeometry option in FvwmButtons

2003-04-23  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (StartMeUp):
	* FvwmTaskBar/Start.c (StartButtonInit):
	Fixed some minor memory leaks

	* FvwmTaskBar/ButtonArray.c (ButtonDraw):
	Fixed a Region leaks when a buttons has no title

2003-04-22  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPerl/FvwmPerl.in:
	fixed preprocess action parameter parsing, several optimizations

2003-04-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (AddNewWindow):
	* FvwmPager/FvwmPager.c (list_configure):
	(list_iconify):
	(list_add):
	fixed iconified windows without an icon showing up after a restart in
	the pager; also fixes iconified windows flashing for a moment when they
	first show up in the pager (e.g. Style * StartIconic).

	* FvwmPager/FvwmPager.c (list_configure):
	(list_iconify):