@@ -1,3 +1,8 @@
+2003-05-27  Mikhael Goikhman  <migo@homemail.com>
+
+	* FvwmIdent/FvwmIdent.c:
+	some reformating
+
 2003-04-30  Bob Woodside  <dumbledore@woodsway.com>
 
 	* FvwmIdent/FvwmIdent.c (ProcessXEvent):
